<resources>
    <string name="app_name">HaiaKarema</string>
    <string name="map">Map</string>
    <string name="files">Files</string>
    <string name="signin">Signin</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="fillAllRequiredFields">Fill all required fields</string>
    <string name="error_password">Password must be contain at least 8 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro">Intro</string>
    <string name="videos">Videos</string>
    <string name="pdfs">PDFs</string>

</resources>