<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/hzPaddingToScreen"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo" />

                <EditText
                    android:id="@+id/etPhoneOrEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_container_height"
                    android:layout_marginBottom="@dimen/hzMarginToScreen"
                    android:background="@drawable/et_auth_bg"
                    android:hint="@string/user_name"
                    android:importantForAutofill="yes"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/text_hint_color"
                    tools:ignore="TextFields" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_container_height"
                    android:layout_marginBottom="@dimen/hzMarginToScreen"
                    android:background="@drawable/et_auth_bg"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint_color"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/et_container_height"
                        android:hint="@string/password"
                        android:importantForAutofill="yes"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/vertical_padding_to_views"
                        android:paddingVertical="0dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_hint_color"
                        android:textSize="@dimen/_14sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignIn"
                    style="@style/RegisterButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_container_height"
                    android:layout_marginTop="@dimen/small_padding_to_views"
                    android:backgroundTint="#50C8EC"
                    android:text="@string/signin"
                    android:textAlignment="center"
                    app:iconPadding="@dimen/vertical_padding_to_views" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>
